fixed navbar background when collapsed. Added has-gradient-background

--- a/resources/styles/shared/_variables.scss
+++ b/resources/styles/shared/_variables.scss
@@ -33,3 +33,5 @@
 %link-transform {
   transition: color 0.2s ease-out;
 }
+
+$primary-gradient: linear-gradient(to bottom, $secondary, $primary);
