--- a/resources/styles/theme/_navbar.scss
+++ b/resources/styles/theme/_navbar.scss
@@ -10,31 +10,61 @@ nav.admin-bar-showing.fixed-top {
   margin-top: 32px;
 }
 
-#nav.transparent-nav {
-  .navbar-brand, .nav-item.active a {
-    color: $light !important;
+
+#nav {
+  .logo {
+    width: 150px;
   }
-  .nav-item .nav-link{
-    color: rgba($light, 0.7) !important;
-  }
-  .navbar-brand {
-    .logo-light{
-      opacity: 0;
-    }
+  &.at-top {
+
+    @extend .navbar-dark;
     .logo-dark {
       opacity: 1;
+
     }
+    .logo-light {
+      opacity: 0;
+    }
+
   }
 
-}
-
-.navbar-brand {
-  max-width: 200px;
-  .logo-light {
-    opacity: 1;
-  }
-  .logo-dark {
-    position: absolute;
-    opacity: 0;
+  &.not-at-top {
+    @extend .navbar-light;
+    @extend .bg-light;
   }
 }
+.logo-light {
+  opacity: 1;
+}
+.logo-dark {
+  position: absolute;
+  opacity: 0;
+}
+// #nav.transparent-nav {
+//   .navbar-brand, .nav-item.active a {
+//     color: $light !important;
+//   }
+//   .nav-item .nav-link{
+//     color: rgba($light, 0.7) !important;
+//   }
+//   .navbar-brand {
+//     .logo-light{
+//       opacity: 0;
+//     }
+//     .logo-dark {
+//       opacity: 1;
+//     }
+//   }
+//
+// }
+//
+// .navbar-brand {
+//   max-width: 200px;
+//   .logo-light {
+//     opacity: 1;
+//   }
+//   .logo-dark {
+//     position: absolute;
+//     opacity: 0;
+//   }
+// }
