--- a/resources/styles/theme/index.scss
+++ b/resources/styles/theme/index.scss
@@ -29,3 +29,10 @@
 @import './_navbar.scss';
 @import './_articles.scss';
 @import './_flex.scss';
+
+.wp-block-coblocks-hero.has-gradient-background .has-background-overlay::before {
+  background-image: $primary-gradient;
+}
+.has-gradient-background {
+  background-image: $primary-gradient;
+}
